--- a/index.html
+++ b/index.html
@@ -3,86 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Form Layout</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <img src="path-to-profile-image.jpg" alt="Profile Picture" class="profile-img">
-            <h1>BRIAN DUDEY</h1>
-            <p>N. Damen Avenue, Chicago 99999 | 999-999-9999 | hello@kickresume.com | www.kickresume.com</p>
-        </header>
 
-        <div class="content">
-            <section class="left-column">
-                <div class="profile">
-                    <h2>Profile</h2>
-                    <p>Innovative optimized solution seeker. Excited to be at the deployment phase of my new career as a web developer. I am ambitious, adventurous, assiduous, animated, and an alliteration advocate.</p>
-                </div>
-
-                <div class="skills">
-                    <h2>Skills</h2>
-                    <h3>Technical Skills</h3>
-                    <ul>
-                        <li>JavaScript</li>
-                        <li>CSS</li>
-                        <li>HTML</li>
-                        <li>React</li>
-                        <li>Redux</li>
-                        <li>Mongo</li>
-                        <li>Deployment</li>
-                    </ul>
-
-                    <h3>Additional Skills</h3>
-                    <ul>
-                        <li>Project Management</li>
-                        <li>Recruitment</li>
-                        <li>Business Development</li>
-                        <li>Editing</li>
-                        <li>Fundraising</li>
-                    </ul>
-                </div>
-
-                <div class="work-experience">
-                    <h2>Work Experience</h2>
-                    <h3>Event Manager</h3>
-                    <p>C3 Presents, Washington DC | 03/2014 – 02/2017</p>
-                    <ul>
-                        <li>Lead and execute all phases of event planning and production...</li>
-                        <li>Brought new business to the organization...</li>
-                        <li>Exercise fiscal control over budget creation, tracking, and reporting.</li>
-                    </ul>
-                </div>
-            </section>
-
-            <section class="right-column">
-                <div class="work-experience">
-                    <h2>Work Experience</h2>
-                    <h3>Community Relations Manager</h3>
-                    <p>Gay & Lesbian Elder Housing, Los Angeles | 06/2011 – 01/2014</p>
-                    <ul>
-                        <li>Arranging presentations and pitch deck.</li>
-                        <li>Designing a PR plan and establishing important focus points.</li>
-                        <li>Designing, creating, and managing content across multiple platforms.</li>
-                        <li>Building relationships with key media players.</li>
-                    </ul>
-                </div>
-
-                <div class="education">
-                    <h2>Education</h2>
-                    <h3>Engineering Immersion Program</h3>
-                    <p>Thinkful, Chicago, IL | 11/2018 – 06/2018</p>
-                    <ul>
-                        <li>Developed a full-stack web application...</li>
-                        <li>Developed a language learning app...</li>
-                    </ul>
-
-                    <h3>BA, English</h3>
-                    <p>University of California, Los Angeles | 09/2001 – 09/2005</p>
-                </div>
-            </section>
+<form class="padding">
+  
+    <div class="form-group">
+        <label class="required">Name</label>
+        <div class="form-row">
+            <input type="text" class="form-control">
+            <input type="text" class="form-control">
+        </div>
+        <div class="form-row">
+            <small class="small-text">First</small>
+            <small class="small-text">Last</small>
         </div>
     </div>
+
+    <div class="form-group">
+        <label class="required">Email</label>
+        <input type="email" class="form-control">
+    </div>
+
+    <div class="survey-section">
+        <label class="required">Your Experience</label>
+        <div>
+            <label class="required-star">★★★★★</label>
+        </div>
+        <p>Overall, how would you rate your experience with us?</p>
+        <label class="required">How satisfied are you with</label>
+    </div>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th scope="row"></th>
+                <td class="text-center">Very Unsatisfied</td>
+                <td class="text-center">Unsatisfied</td>
+                <td class="text-center">Neutral</td>
+                <td class="text-center">Satisfied</td>
+                <td class="text-center">Very Satisfied</td>
+              </tr>
+          <tr class="table-secondary form-rows special-row">
+            <td>Purchase</td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="1"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="2"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="3"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="4"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="5"></td>
+          </tr>
+          <tr>
+            <td>Purchase</td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="1"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="2"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="3"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="4"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="5"></td>
+          </tr>
+          <tr class="table-secondary form-rows special-row">
+            <td>Purchase</td>
+                <td class="text-center"><input type="radio" name="recommend_company" value="1"></td>
+                <td class="text-center"><input type="radio" name="recommend_company" value="2"></td>
+                <td class="text-center"><input type="radio" name="recommend_company" value="3"></td>
+                <td class="text-center"><input type="radio" name="recommend_company" value="4"></td>
+                <td class="text-center"><input type="radio" name="recommend_company" value="5"></td>
+          </tr>
+        </tbody>
+      </table>
+
+
+      <div class="survey-section">
+        <label class="required">How likely are you to</label>
+    </div>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th scope="row"></th>
+                <td class="text-center">Very Unlikely</td>
+                <td class="text-center">Unlikely</td>
+                <td class="text-center">Neutral</td>
+                <td class="text-center">likely</td>
+                <td class="text-center">Very Likely</td>
+              </tr>
+          <tr class="table-secondary form-rows special-row">
+            <td>Buy from us again</td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="1"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="2"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="3"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="4"></td>
+            <td class="text-center"><input type="radio" name="recommend_company" value="5"></td>
+          </tr>
+          <tr>
+            <td>Recommend our <br>product to others</td>
+            <td class="text-center center-align"><input type="radio" name="recommend_company" value="1"></td>
+            <td class="text-center center-align"><input type="radio" name="recommend_company" value="2"></td>
+            <td class="text-center center-align"><input type="radio" name="recommend_company" value="3"></td>
+            <td class="text-center center-align"><input type="radio" name="recommend_company" value="4"></td>
+            <td class="text-center center-align"><input type="radio" name="recommend_company" value="5"></td>
+          </tr>
+          <tr class="table-secondary form-rows special-row">
+            <td>Recommend our <br>company to others</td>
+                <td class="text-center center-align"><input type="radio" name="recommend_company" value="1"></td>
+                <td class="text-center center-align"><input type="radio" name="recommend_company" value="2"></td>
+                <td class="text-center center-align"><input type="radio" name="recommend_company" value="3"></td>
+                <td class="text-center center-align"><input type="radio" name="recommend_company" value="4"></td>
+                <td class="text-center center-align"><input type="radio" name="recommend_company" value="5"></td>
+          </tr>
+
+        </tbody>
+    </table>
+    <div class="survey-section">
+        <label for="comments">Additional comments or suggestions</label>
+        <textarea id="comments" name="comments"></textarea>
+    </div>
+    <button type="submit">Submit</button>
+</form>
 </body>
 </html>
